--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Liveapp</title>
+  <title>Estelí Live</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= csrf_meta_tags %>
@@ -12,6 +12,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v16/2fcrYFNaTjcS6g4U3t-Y5RV6cRhDpPC5P4GCEJpqGoc.woff) format('woff');
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(/assets/Material-Design-Icons.woff) format('woff');
 }
         .material-icons {
           font-family: 'Material Icons';
@@ -34,7 +35,7 @@
 <header>
 
 <div class="navbar-fixed">
-  <nav class="blue darken-4">
+  <nav class="teal darken-2">
     <div class="nav-wrapper">
       <div class="row center">
         <a href="/menus" class="col s2"><i class="material-icons icon-navbar" style="font-size:3rem;">menu</i></a>
