--- a/app/views/coupons/edit.html.erb
+++ b/app/views/coupons/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Coupon</h1>
+<div class="container">
+	<h5>Editar Cupón: <%= @coupon.code %></h5>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @coupon %> |
-<%= link_to 'Back', coupons_path %>
+	<%= link_to 'Ver Cupón', @coupon %> |
+	<%= link_to 'Volver', coupons_path %>
+</div>
