--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,25 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Coupons</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @coupons.each do |coupon| %>
-      <tr>
-        <td><%= link_to 'Show', coupon %></td>
-        <td><%= link_to 'Edit', edit_coupon_path(coupon) %></td>
-        <td><%= link_to 'Destroy', coupon, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Coupon', new_coupon_path %>
+<h5>Cupones</h5>
+<% if client_signed_in? %>
+<%= render @client_coupons %>
+<% end %>
+<%  @coupons.each do |coupon| %>
+	<%= coupon.code %>
+	<%= link_to("Reclamar", redeem_path(coupon_id: coupon.id) , method: :post) %>
+<% end %>
