--- a/app/views/menus/tool/_overview.html.erb
+++ b/app/views/menus/tool/_overview.html.erb
@@ -21,7 +21,7 @@
                         <i class="material-icons white-text">local_offer</i>
                     </span>
                     <div class="info-box-content">
-                        <%= coupon.code %><br>
+                        <%= link_to(coupon.code, edit_coupon_path(coupon)) %><br>
                         <b><%= coupon.amount %>%</b>
                     </div>
                 </div>
