--- a/app/views/menus/tool/_coupons.html.erb
+++ b/app/views/menus/tool/_coupons.html.erb
@@ -37,7 +37,7 @@
 <div class="row">
 	<div class="panel-box col s6">
 	<div class="box-header">Cangear Cupón</div>
-		<table class="center">
+		<table class="centered">
 			<tr>
 				<th>Código de Cupón</th>
 				<th>Cliente</th>
