--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -6,7 +6,7 @@
 		<li class="collection-item">
 			<div class="row" style="margin-bottom:0px;">
 				<div class="col s4">
-					<%= link_to image_tag(current_user.profile.avatar(:mini), class:"circle responsive-img"), profile_path(current_user.profile)%>
+					<%= link_to image_tag(current_user.profile.avatar(:mini), class:"circle responsive-img", style:"max-height:100px;"), profile_path(current_user.profile)%>
 				</div>
 			<div class="col s6 gray-text">
 					<p >
