--- a/app/views/menus/tools.html.erb
+++ b/app/views/menus/tools.html.erb
@@ -96,7 +96,7 @@
         <!--END Box-->
         <div id="tab1"><%= render 'menus/tool/overview' %></div>
         <div id="tab2"><%= render 'menus/tool/surveys' %></div>
-        <div id="tab3"></div>
+        <div id="tab3"><%= render 'menus/tool/events' %></div>
         <div id="tab4"><%= render 'menus/tool/coupons' %></div>
     </section>
 </div>
