--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,26 +1,20 @@
 <div class="row">
 
-<div class="col s12" style="margin-top:1%;">
-  <%- if controller_name != 'sessions' %>
-    <%= link_to "Atrás", :back, class:"btn-large red" %>
-  <% end -%>
-</div>
-
-<div class="col s12" style="margin-top:1%;">
+<div class="col s4" style="margin-top:1%;">
     <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-      <%= link_to "Registrarse", new_registration_path(resource_name), class:"btn indigo" %>
+      ¿No tienes cuenta? <%= link_to "Crear una", new_registration_path(resource_name) %>
     <% end -%>
 </div>
 
-<div class="col s12" style="margin-top:1%;">
+<div class="col s4" style="margin-top:1%;">
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "¿Eres una empresa?", new_user_session_path, class:"btn indigo"%>
+    <%= link_to "¿Eres una empresa?", new_user_session_path%>
   <% end -%>
 </div>
 
-<div class="col s12" style="margin-top:1%;">
+<div class="" style="margin-top:1%;">
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Recuperar Contraseña", new_password_path(resource_name), class:"btn indigo lighten-2" %>
+    <%= link_to "Recuperar Contraseña", new_password_path(resource_name) %>
   <% end -%>
 </div>
 
