--- a/app/views/clientprofiles/edit.html.erb
+++ b/app/views/clientprofiles/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container grey-text darken-4">
-<h4>Editar Perfil</h4>
+<h4 class="center"><%= @clientprofile.name %></h4>
 
   <%= render 'form' %>
 </div>
