--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,24 +1,17 @@
 <div class="container">
 	<h5 class="grey-text darken-4"><%= @category.name %></h5>
 	<% @category.profiles.each do |profile| %>
-
-      <div class="row" style="height:450px;">
-          <div class="card">
-            <div class="card-image">
-							<%= link_to image_tag(profile.cover.url),profile_path(profile) %>
-              <span style="text-shadow: 0px 0px 6px rgba(0, 0, 0, 1);" class="card-title text_transp"><%= profile.name %></span>
-
-            </div>
-            <div class="card-content">
-							<div class="star-rating" data-score= <%= profile.reviews.average(:rating) %> ></div>
-              <p><%= profile.body %></p>
-            </div>
-            <div class="card-action">
-              <%= link_to("Ver Mas", profile) %>
+        <div class="row panel-box">
+          <div class="col s4" style="padding:1px;">
+            <%= link_to image_tag(profile.cover, class:"responsive-img"),profile_path(profile) %>
+          </div>
+          <div class="col s8">
+          <b><%= profile.name %></b>
+          <div class="star-rating" data-score= <%= profile.reviews.average(:rating) %> >
+          </div>
+              <%= profile.body %>
             </div>
           </div>
-      </div>
-
 <% end %>
 
 <% if master_admin_signed_in? %>
