--- a/app/views/clientprofiles/show.html.erb
+++ b/app/views/clientprofiles/show.html.erb
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-  <b>Ubicación: </b><%= @clientprofile.city %>
+  <b>Ubicación: </b><%= @clientprofile.ubication %>
 </div>
 <div>
   <p><b>Biografía: </b><%= @clientprofile.biography %>
