--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,18 +1,22 @@
-<div class="row">
+<div class="row center">
 
 <div class="col s4" style="margin-top:1%;">
-    <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%- if devise_mapping.registerable? && controller_name != 'registrations' && session_path(resource) == "/clients/sign_in" %>
       ¿No tienes cuenta? <%= link_to "Crear una", new_registration_path(resource_name) %>
+      <% else %>
+      <%= link_to "Registra tu empresa", new_registration_path(resource_name) %>
     <% end -%>
 </div>
 
 <div class="col s4" style="margin-top:1%;">
-  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' && session_path(resource) == "/clients/sign_in" %>
     <%= link_to "¿Eres una empresa?", new_user_session_path%>
+    <% else %>
+      <%= link_to "¿Eres un cliente?", new_client_session_path%>
   <% end -%>
 </div>
 
-<div class="" style="margin-top:1%;">
+<div class="col s4" style="margin-top:1%;">
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
     <%= link_to "Recuperar Contraseña", new_password_path(resource_name) %>
   <% end -%>
