--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,18 +1,19 @@
 <%= simple_form_for(@movie) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div id="test1" class="col s12">
     <%= f.input :title, label:"Título" %>
-    <%= f.input :original_title, label:"Título original" %>
-    <%= f.input :country, :as => :string, label:"País" %>
-    <%= f.input :production, label:"Producción" %>
-    <%= f.input :script, label:"Guión" %>
-    <%= f.input :allocation, label:"Reparto" %>
     <%= f.input :clasification, label:"Clasificación" %>
     <%= f.input :sinopsis %>
+    <%= f.input :trailer, placeholder:"ejem: https://www.youtube.com/watch?v=Ip0JdVTOSkE" %>
+    <%= f.input :cover, as: :file %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, label:"Publicar Película" %>
+  <div id="test2" class="col s12">
+    <%= f.input :date_from, label:"Disponible desde", as: :date,html5: true, input_html: {class:"datepicker"} %>
+    <%= f.input :date_until, label:"Disponible hasta", as: :date,html5: true, input_html: {class:"datepicker"} %>
+    <%= f.input :times, label:"Horarios y Salas" %>
   </div>
+
+  <%= f.button :submit, label:"Publicar Película" %>
 <% end %>
