--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Movie</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @movie %> |
-<%= link_to 'Back', movies_path %>
+<div class="container">
+	<h4><%= @movie.title %></h4>	
+	<div class="row">
+		<div class="col s12">
+			<ul class="tabs">
+				<li class="tab col s3"><a href="#test1">Película</a></li>
+				<li class="tab col s3"><a href="#test2">Salas de Cine</a></li>
+			</ul>
+		</div>
+		<%= render 'form' %>
+	</div>
+	<%= link_to 'Back', movies_path %>
+</div>
