--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -6,7 +6,19 @@
     <%= f.input :clasification, label:"Clasificación" %>
     <%= f.input :sinopsis %>
     <%= f.input :trailer, placeholder:"ejem: https://www.youtube.com/watch?v=Ip0JdVTOSkE" %>
-    <%= f.input :cover, as: :file %>
+    
+
+<div class="file-field input-field">
+  <div class="btn red">
+    <span>Abrir</span>
+    <input type="file">
+    <%= f.file_field :cover, input_html: { hidden: true }%>
+  </div>
+  <div class="file-path-wrapper">
+    <input class="file-path validate" type="text">
+  </div>
+</div>
+
   </div>
 
   <div id="test2" class="col s12">
