--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,31 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Movies</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Clasification</th>
-      <th>Sinopsis</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-        <td><%= movie.title %></td>
-        <td><%= movie.clasification %></td>
-        <td><%= movie.sinopsis %></td>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Movie', new_movie_path %>
+<div class="container">
+  <h5>Películas</h5>
+  <div>
+    <div class="flex-row">
+      <%= render @movies %>
+    </div>
+  </div>
+</div>
